--- a/index.html
+++ b/index.html
@@ -11,14 +11,32 @@
     background: red;
     }
     div#toolbar { 
-    position: fixed;
-    top: 0;
-    height: 100px;
-    width: 100%;
-    z-index: 1000;
-    background: magenta;
-    display: flex;
-    flex-direction: row;
+      position: fixed;
+      top: 0;
+      padding: 0.5rem;
+      height: 2.5rem;
+      width: 100%;
+      z-index: 1000;
+      background: magenta;
+      display: flex;
+      flex-direction: row;
+    }
+    .tool { 
+      height: 1.5rem;
+      width: 1.5rem;
+      padding: 0.5rem;
+    }
+    .tool.active{
+      background: red;
+    }
+    .tool * {
+      height: 100%;
+    }
+    #scene { 
+      background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAACXBIWXMAABYlAAAWJQFJUiTwAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAgSURBVHgB7cAxDQAACAOwBeVI58HDnjb7UjIBAAAAyg6hHgQDoYSOAQAAAABJRU5ErkJggg==");
+      background-repeat: repeat;
+      background-position: 31px 15px;
+      background-size: 32px 32px;
     }
     </style>
 </head>
@@ -27,29 +45,31 @@
 <body style="position: fixed; height: 100%; width:100%">
 
     <div id="toolbar" >
-      <div id="moveTool">
-      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrows-move" viewBox="0 0 16 16">
+      <div id="moveTool" class="tool" >
+      <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-arrows-move" viewBox="0 0 16 16">
         <path fill-rule="evenodd" d="M7.646.146a.5.5 0 0 1 .708 0l2 2a.5.5 0 0 1-.708.708L8.5 1.707V5.5a.5.5 0 0 1-1 0V1.707L6.354 2.854a.5.5 0 1 1-.708-.708zM8 10a.5.5 0 0 1 .5.5v3.793l1.146-1.147a.5.5 0 0 1 .708.708l-2 2a.5.5 0 0 1-.708 0l-2-2a.5.5 0 0 1 .708-.708L7.5 14.293V10.5A.5.5 0 0 1 8 10M.146 8.354a.5.5 0 0 1 0-.708l2-2a.5.5 0 1 1 .708.708L1.707 7.5H5.5a.5.5 0 0 1 0 1H1.707l1.147 1.146a.5.5 0 0 1-.708.708zM10 8a.5.5 0 0 1 .5-.5h3.793l-1.147-1.146a.5.5 0 0 1 .708-.708l2 2a.5.5 0 0 1 0 .708l-2 2a.5.5 0 0 1-.708-.708L14.293 8.5H10.5A.5.5 0 0 1 10 8"/>
-    </svg></div>
-    <div id="selectTool" >
-      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-square" viewBox="0 0 16 16">
-        <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
-      </svg>
-    </div>
-
-      <div id="SquareTool" ><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cursor-fill" viewBox="0 0 16 16">
-  <path d="M14.082 2.182a.5.5 0 0 1 .103.557L8.528 15.467a.5.5 0 0 1-.917-.007L5.57 10.694.803 8.652a.5.5 0 0 1-.006-.916l12.728-5.657a.5.5 0 0 1 .556.103z"/>
-</svg></div>
+        </svg>
+      </div>
+      <div id="containerTool" class="tool active" >
+        <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-square" viewBox="0 0 16 16">
+          <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
+        </svg>
+      </div>
+      <div id="selectTool" class="tool" >
+        <svg xmlns="http://www.w3.org/2000/svg"  fill="currentColor" class="bi bi-cursor-fill" viewBox="0 0 16 16">
+          <path d="M14.082 2.182a.5.5 0 0 1 .103.557L8.528 15.467a.5.5 0 0 1-.917-.007L5.57 10.694.803 8.652a.5.5 0 0 1-.006-.916l12.728-5.657a.5.5 0 0 1 .556.103z"/>
+        </svg>
+      </div>
     </div>
 
     <!-- this is the draggable root to use with panzoom -->
-    <div id='scene' style="background: cyan; height:100%; width:100%"> 
+    <div id='scene' style="height:100%; width:100%"> 
       <p> Hello !!! </p>
     </div>
     <script>
       var element = document.querySelector("#scene")
       // panzoom(element)
-impressive().init() 
+impressive("scene").init() 
     </script>
 </body>
 </html>
