Added container class

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
 <head>
     <script src='panzoom/dist/panzoom.js'></script>
     <link rel="stylesheet" href="css/reset.css" >
-    <script src="js/main.js"></script>
+    <link rel="stylesheet" href="css/impressive.css" >
+    <script src="js/impressive.js"></script>
     <style>
-      div.container{
-    background: red;
+    div.container{
+      background: red;
     }
     div#toolbar { 
       position: fixed;
@@ -33,6 +34,7 @@
       height: 100%;
     }
     #scene { 
+      position: fixed;
       background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAACXBIWXMAABYlAAAWJQFJUiTwAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAgSURBVHgB7cAxDQAACAOwBeVI58HDnjb7UjIBAAAAyg6hHgQDoYSOAQAAAABJRU5ErkJggg==");
       background-repeat: repeat;
       background-position: 31px 15px;
