Skeleton is almost done

--- a/index.html
+++ b/index.html
@@ -11,17 +11,6 @@
     div.container{
       background: red;
     }
-    div#toolbar { 
-      position: fixed;
-      top: 0;
-      padding: 0.5rem;
-      height: 2.5rem;
-      width: 100%;
-      z-index: 1000;
-      background: magenta;
-      display: flex;
-      flex-direction: row;
-    }
     .tool { 
       height: 1.5rem;
       width: 1.5rem;
@@ -46,6 +35,11 @@
 <!-- this is your html file with svg -->
 <body style="position: fixed; height: 100%; width:100%">
 
+    <div id='scene' style="height:100%; width:100%;" data-x=0 data-y=0> 
+      <p> Hello !!! </p>
+    </div>
+
+    <div id = "overlay">
     <div id="toolbar" >
       <div id="moveTool" class="tool" >
       <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-arrows-move" viewBox="0 0 16 16">
@@ -62,16 +56,40 @@
           <path d="M14.082 2.182a.5.5 0 0 1 .103.557L8.528 15.467a.5.5 0 0 1-.917-.007L5.57 10.694.803 8.652a.5.5 0 0 1-.006-.916l12.728-5.657a.5.5 0 0 1 .556.103z"/>
         </svg>
       </div>
+        <div id="presentTool" class="tool">
+                <svg
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M19 3H5C3.89543 3 3 3.89543 3 5V19C3 20.1046 3.89543 21 5 21H19C20.1046 21 21 20.1046 21 19V5C21 3.89543 20.1046 3 19 3ZM5 1C2.79086 1 1 2.79086 1 5V19C1 21.2091 2.79086 23 5 23H19C21.2091 23 23 21.2091 23 19V5C23 2.79086 21.2091 1 19 1H5Z"
+              fill="currentColor"
+            />
+            <path d="M16 12L10 16.3301V7.66987L16 12Z" fill="currentColor" />
+          </svg>
+        </div>
+    </div>
+
+    <div id="stepList">
+      <div id="addStep" >
+        <svg  xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-square" viewBox="0 0 16 16">
+          <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
+          <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4"/>
+        </svg>
+      </div>
+      </div>  
     </div>
 
     <!-- this is the draggable root to use with panzoom -->
-    <div id='scene' style="height:100%; width:100%"> 
-      <p> Hello !!! </p>
-    </div>
     <script>
       var element = document.querySelector("#scene")
       // panzoom(element)
-impressive("scene").init() 
+      impressive("scene").init() 
     </script>
 </body>
 </html>
