added window class

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <html>
 
 <head>
-    <script src='panzoom/dist/panzoom.js'></script>
+    <!-- <F12><script src='panzoom/dist/panzoom.js'></script> -->
+    <!-- <script src="js/getEventListener.js"></script> -->
     <link rel="stylesheet" href="css/reset.css" >
     <link rel="stylesheet" href="css/impressive.css" >
     <script src="js/impressive.js"></script>
@@ -36,7 +37,7 @@
 <body style="position: fixed; height: 100%; width:100%">
 
     <div id='scene' style="height:100%; width:100%;" data-x=0 data-y=0> 
-      <p> Hello !!! </p>
+      <p data-x=0 data-y=0> Hello !!! </p>
     </div>
 
     <div id = "overlay">
@@ -72,6 +73,9 @@
             />
             <path d="M16 12L10 16.3301V7.66987L16 12Z" fill="currentColor" />
           </svg>
+        </div>
+        <div>
+
         </div>
     </div>
 
